@@ -1,3 +1,11 @@
+2004-02-13  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
+
+	* gtk/gtkglwidget.c (gtk_widget_get_gl_context):
+	gtk_quit_add_destroy() call is removed because it cause a problem
+	with recursive mainloop.
+	(gtk_gl_widget_unrealize): Rendering context is now destroyed on
+	"unrealize" signal.
+
 2003-11-20  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
 
 	* ==== Released 1.0.5 ====
